[metadata]
name = jmesobj
version = attr: jmesobj.version.__version__
url = https://github.com/rmax/jmesobj
author = R Max Espinoza
author_email = me@rmax.io
description = JMESPath-powered data container ideal for JSON payloads.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source = https://github.com/rmax/jmesobj
    Tracker = https://github.com/rmax/jmesobj/issues

[options]
python_requires = >=3.7
packages = find:
zip_safe = false
inclue_package_data = true
install_requires =
    jmespath >= 0.9

[flake8]
exclude = build,.git,.tox,./tests/.env
ignore = W504,W601
max-line-length = 99

[tool:pytest]
addopts = -ra -v --doctest-modules
